Try to prevent word wrapping on index, so made it wider.

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 #container {
     margin: 0 auto;
-    max-width: 1100px;
+    max-width: 1200px;
 }
 
 h1 {
